Fix form on mobile

--- a/mypatternlab/source/css/scss/base/_form.scss
+++ b/mypatternlab/source/css/scss/base/_form.scss
@@ -26,7 +26,14 @@ form {
   .FieldRow {
     margin: 0 auto;
     padding: 0 0 32px;
-    width: 40%;
+
+    @include susy-breakpoint( $bp-small, $layout-small ) {
+      width: 100%;
+    }
+
+    @include susy-breakpoint( $bp-large, $layout-large, $no-query: true ) {
+      width: 40%;
+    }
   }
 
   .FieldRow_Label, .FieldRow_Input {
